@@ -12,6 +12,8 @@ OpenDNSSEC 1.4.3
 * OPENDNSSEC-458: Add 'ods-enforcerd -p <policy>' option. This prompts the 
   enforcer to run once and only process the specified policy and associated
   zones.
+* OPENDNSSEC-460: ods-ksmutil: Add an option to the 'ods-ksmutil key ds-seen'
+  command so the user can choose not to notify the enforcer. 
 
 
 Bugfixes:
